# OpenCV_Pjt-StickDiscern

EelArea/: CMakeLists.txt  parameters.r
EelArea/src/: StickDiscern.cpp  StickDiscern.h  main.cpp
